autoconf-archive.texi: updated top-level menu after recent changes

--- a/autoconf-archive.texi
+++ b/autoconf-archive.texi
@@ -50,242 +50,7 @@ General Public License for more details.
 @end ifnottex
 
 @menu
-* _ac_c_ifdef::
-* _acltx_test::
-* ac_arg_with_path_style::
-* ac_c_bigendian_cross::
-* ac_c_long_long::
-* ac_c_printf_thsep::
-* ac_c_var_func::
-* ac_caolan_check_package::
-* ac_caolan_search_package::
-* ac_check_class::
-* ac_check_classpath::
-* ac_check_docbook_dtd::
-* ac_check_docbook_xslt::
-* ac_check_docbook_xslt_min::
-* ac_check_func_in::
-* ac_check_icu::
-* ac_check_java_home::
-* ac_check_junit::
-* ac_check_mysql_db::
-* ac_check_mysqlr::
-* ac_check_rqrd_class::
-* ac_check_struct_for::
-* ac_check_symbol::
-* ac_check_typedef::
-* ac_check_user::
-* ac_compile_check_sizeof::
-* ac_cond_with_level::
-* ac_create_generic_config::
-* ac_create_target_h::
-* ac_cxx_bool::
-* ac_cxx_compile_stdcxx_0x::
-* ac_cxx_compiler_vendor::
-* ac_cxx_complex_math_in_namespace_std::
-* ac_cxx_const_cast::
-* ac_cxx_cppflags_std_lang::
-* ac_cxx_cxxflags_std_lang::
-* ac_cxx_default_template_parameters::
-* ac_cxx_dtor_after_atexit::
-* ac_cxx_dynamic_cast::
-* ac_cxx_enum_computations::
-* ac_cxx_enum_computations_with_cast::
-* ac_cxx_exceptions::
-* ac_cxx_explicit::
-* ac_cxx_explicit_instantiations::
-* ac_cxx_explicit_template_function_qualification::
-* ac_cxx_extern_template::
-* ac_cxx_full_specialization_syntax::
-* ac_cxx_function_nontype_parameters::
-* ac_cxx_gnucxx_hashmap::
-* ac_cxx_have_complex::
-* ac_cxx_have_complex_math1::
-* ac_cxx_have_complex_math2::
-* ac_cxx_have_empty_iostream::
-* ac_cxx_have_ext_hash_map::
-* ac_cxx_have_ext_hash_set::
-* ac_cxx_have_ext_slist::
-* ac_cxx_have_freeze_sstream::
-* ac_cxx_have_ieee_math::
-* ac_cxx_have_long_long_for_iostream::
-* ac_cxx_have_numeric_limits::
-* ac_cxx_have_sstream::
-* ac_cxx_have_std::
-* ac_cxx_have_stl::
-* ac_cxx_have_string_push_back::
-* ac_cxx_have_system_v_math::
-* ac_cxx_have_valarray::
-* ac_cxx_have_vector_at::
-* ac_cxx_header_pre_stdcxx::
-* ac_cxx_header_stdcxx_0x::
-* ac_cxx_header_stdcxx_98::
-* ac_cxx_header_stdcxx_tr1::
-* ac_cxx_header_tr1_unordered_map::
-* ac_cxx_header_tr1_unordered_set::
-* ac_cxx_header_unordered_map::
-* ac_cxx_header_unordered_set::
-* ac_cxx_ldflags_std_lang::
-* ac_cxx_member_constants::
-* ac_cxx_member_templates::
-* ac_cxx_member_templates_outside_class::
-* ac_cxx_mutable::
-* ac_cxx_namespace_std::
-* ac_cxx_namespaces::
-* ac_cxx_new_for_scoping::
-* ac_cxx_old_for_scoping::
-* ac_cxx_partial_ordering::
-* ac_cxx_partial_specialization::
-* ac_cxx_reinterpret_cast::
-* ac_cxx_rtti::
-* ac_cxx_static_cast::
-* ac_cxx_stlport_hashmap::
-* ac_cxx_template_keyword_qualifier::
-* ac_cxx_template_qualified_base_class::
-* ac_cxx_template_qualified_return_type::
-* ac_cxx_template_scoped_argument_matching::
-* ac_cxx_templates::
-* ac_cxx_templates_as_template_arguments::
-* ac_cxx_typename::
-* ac_cxx_use_numtrait::
-* ac_cxx_verbose_terminate_handler::
-* ac_define_dir::
-* ac_define_integer_bits::
-* ac_define_sub_path::
-* ac_func_accept_argtypes::
-* ac_func_memmove::
-* ac_func_mkdir::
-* ac_func_snprintf::
-* ac_java_options::
-* ac_jni_include_dir::
-* ac_lib_id3::
-* ac_lib_upnp::
-* ac_lib_wad::
-* ac_libtoolize_cflags::
-* ac_numeric_namedlevel::
-* ac_perl_module_version::
-* ac_pkg_mico::
-* ac_pkg_swig::
-* ac_prog_apache::
-* ac_prog_cc_char_subscripts::
-* ac_prog_cc_for_build::
-* ac_prog_cp_s::
-* ac_prog_crontab::
-* ac_prog_httpd::
-* ac_prog_jar::
-* ac_prog_java::
-* ac_prog_java_cc::
-* ac_prog_java_works::
-* ac_prog_javac::
-* ac_prog_javac_works::
-* ac_prog_javadoc::
-* ac_prog_javah::
-* ac_prog_modprobe::
-* ac_prog_mysql::
-* ac_prog_mysqladmin::
-* ac_prog_mysqld::
-* ac_prog_mysqlimport::
-* ac_prog_mysqlshow::
-* ac_prog_perl_modules::
-* ac_prog_scp::
-* ac_prog_ssh::
-* ac_prog_xsltproc::
-* ac_prototype::
-* ac_prototype_accept::
-* ac_prototype_getsockname::
-* ac_prototype_setsockopt::
-* ac_python_devel::
-* ac_python_module::
-* ac_raf_func_which_getservbyname_r::
-* ac_set_default_paths_system::
-* ac_subdir_files::
-* ac_sys_dev_poll::
-* ac_sys_largefile_sensitive::
-* ac_try_compile_java::
-* ac_try_run_javac::
-* ac_var_timezone_externals::
-* ac_very_nice::
-* acltx_class::
-* acltx_class_article::
-* acltx_class_book::
-* acltx_class_cweb::
-* acltx_class_report::
-* acltx_classes::
-* acltx_compress_eps::
-* acltx_converting_fig::
-* acltx_converting_jpg_eps::
-* acltx_converting_png_eps::
-* acltx_default_class::
-* acltx_dvips_o_stdout::
-* acltx_dvips_t::
-* acltx_dvips_t_a4::
-* acltx_dvips_t_a4_landscape::
-* acltx_dvips_t_letter::
-* acltx_dvips_t_letter_landscape::
-* acltx_package::
-* acltx_package_amsmath::
-* acltx_package_babel::
-* acltx_package_babel_language::
-* acltx_package_fontenc::
-* acltx_package_input::
-* acltx_package_listings::
-* acltx_package_listings_language::
-* acltx_package_location::
-* acltx_package_opt::
-* acltx_packages::
-* acltx_prog_bibtex::
-* acltx_prog_dvibook::
-* acltx_prog_dvipdf::
-* acltx_prog_dvips::
-* acltx_prog_fig2dev::
-* acltx_prog_gnuplot::
-* acltx_prog_gunzip::
-* acltx_prog_gzip::
-* acltx_prog_jpeg2ps::
-* acltx_prog_jpegtopnm::
-* acltx_prog_kpsewhich::
-* acltx_prog_latex2html::
-* acltx_prog_latex2man::
-* acltx_prog_latex2png::
-* acltx_prog_latex2rtf::
-* acltx_prog_latex::
-* acltx_prog_makeindex::
-* acltx_prog_mf::
-* acltx_prog_mktexpk::
-* acltx_prog_pdflatex::
-* acltx_prog_pngtopnm::
-* acltx_prog_pnmtops::
-* acltx_prog_ps2pdf::
-* acltx_prog_psbook::
-* acltx_prog_psnup::
-* acltx_prog_psresize::
-* acltx_prog_psselect::
-* acltx_prog_pstops::
-* acltx_prog_texhash::
-* acltx_texmf_path::
-* acx_blas::
-* acx_blas_f77_func::
-* acx_check_dos_filesys::
-* acx_check_pathname_style::
-* acx_f77_cmain_fflags::
-* acx_func_fork::
-* acx_lapack::
-* acx_mpi::
-* acx_pthread::
-* adl_compute_relative_paths::
-* adl_compute_standard_relative_paths::
-* adl_func_getopt_long::
-* adl_normalize_path::
-* ag_check_allocated_ctime::
-* ag_check_pathfind::
-* ag_check_posix_regcomp::
-* ag_check_posix_sysinfo::
-* ag_check_strcspn::
-* ag_check_strftime::
-* ag_check_sys_siglist::
-* ag_check_uname_syscall::
-* am_rpm_init::
-* am_with_mpatrol::
+* ax_absolute_header::
 * ax_ac_append_to_file::
 * ax_ac_print_to_file::
 * ax_add_am_macro::
@@ -293,11 +58,16 @@ General Public License for more details.
 * ax_add_am_trilinos_makefile_export::
 * ax_add_recursive_am_macro::
 * ax_add_recursive_am_macro_static::
+* ax_afs::
 * ax_am_jobserver::
 * ax_am_macros::
 * ax_am_macros_static::
 * ax_append_to_file::
+* ax_arg_with_path_style::
 * ax_auto_include_headers::
+* ax_berkeley_db::
+* ax_blas::
+* ax_blas_f77_func::
 * ax_boost_asio::
 * ax_boost_base::
 * ax_boost_date_time::
@@ -317,12 +87,21 @@ General Public License for more details.
 * ax_c99_inline::
 * ax_c___attribute__::
 * ax_c_arithmetic_rshift::
+* ax_c_bigendian_cross::
 * ax_c_check_flag::
+* ax_c_compile_value::
 * ax_c_declare_block::
 * ax_c_float_words_bigendian::
+* ax_c_ifdef::
+* ax_c_long_long::
+* ax_c_printf_thsep::
 * ax_c_referenceable_passed_va_list::
+* ax_c_var_func::
 * ax_cache_size::
+* ax_caolan_check_package::
+* ax_caolan_search_package::
 * ax_cc_maxopt::
+* ax_cf_ebcdic::
 * ax_cflags_aix_option::
 * ax_cflags_gcc_option::
 * ax_cflags_hpux_option::
@@ -331,7 +110,9 @@ General Public License for more details.
 * ax_cflags_strict_prototypes::
 * ax_cflags_sun_option::
 * ax_cflags_warn_all::
+* ax_cflags_warn_all_ansi::
 * ax_check_aligned_access_required::
+* ax_check_allocated_ctime::
 * ax_check_awk__v::
 * ax_check_awk__x_escapes::
 * ax_check_awk_and::
@@ -384,29 +165,144 @@ General Public License for more details.
 * ax_check_awk_var_regexp::
 * ax_check_awk_variable_value_pairs::
 * ax_check_awk_xor::
+* ax_check_class::
+* ax_check_classpath::
 * ax_check_compiler_flags::
 * ax_check_define::
+* ax_check_docbook_dtd::
+* ax_check_docbook_xslt::
+* ax_check_docbook_xslt_min::
+* ax_check_dos_filesys::
+* ax_check_func_in::
 * ax_check_gd::
 * ax_check_gl::
 * ax_check_glu::
 * ax_check_glut::
+* ax_check_gnu_make::
+* ax_check_icu::
+* ax_check_java_home::
+* ax_check_java_plugin::
+* ax_check_junit::
 * ax_check_linker_flags::
+* ax_check_mysql_db::
+* ax_check_mysqlr::
+* ax_check_off64_t::
 * ax_check_openssl::
 * ax_check_page_aligned_malloc::
+* ax_check_pathfind::
+* ax_check_pathname_style::
+* ax_check_pgsql_db::
+* ax_check_posix_regcomp::
+* ax_check_posix_sysinfo::
+* ax_check_postgres_db::
+* ax_check_rqrd_class::
+* ax_check_sign::
+* ax_check_strcspn::
+* ax_check_strftime::
+* ax_check_struct_for::
+* ax_check_sunpro_c::
+* ax_check_symbol::
+* ax_check_sys_siglist::
+* ax_check_typedef::
+* ax_check_uname_syscall::
+* ax_check_user::
+* ax_check_zlib::
 * ax_compare_version::
+* ax_compile_check_sizeof::
 * ax_compiler_vendor::
+* ax_compute_relative_paths::
+* ax_compute_standard_relative_paths::
+* ax_cond_with_level::
 * ax_config_feature::
 * ax_configure_args::
 * ax_count_cpus::
 * ax_cpp_check_flag::
 * ax_cpu_freq::
 * ax_cpu_vendor::
+* ax_create_generic_config::
 * ax_create_pkgconfig_info::
 * ax_create_stdint_h::
+* ax_create_target_h::
 * ax_cvs::
+* ax_cxx_bool::
 * ax_cxx_check_flag::
+* ax_cxx_compile_stdcxx_0x::
+* ax_cxx_compiler_vendor::
+* ax_cxx_complex_math_in_namespace_std::
+* ax_cxx_const_cast::
+* ax_cxx_cppflags_std_lang::
+* ax_cxx_cxxflags_std_lang::
+* ax_cxx_default_template_parameters::
+* ax_cxx_dtor_after_atexit::
+* ax_cxx_dynamic_cast::
+* ax_cxx_enum_computations::
+* ax_cxx_enum_computations_with_cast::
+* ax_cxx_exceptions::
+* ax_cxx_explicit::
+* ax_cxx_explicit_instantiations::
+* ax_cxx_explicit_template_function_qualification::
+* ax_cxx_extern_template::
+* ax_cxx_full_specialization_syntax::
+* ax_cxx_function_nontype_parameters::
+* ax_cxx_function_try_blocks::
 * ax_cxx_gcc_abi_demangle::
+* ax_cxx_gnucxx_hashmap::
+* ax_cxx_have_complex::
+* ax_cxx_have_complex_math1::
+* ax_cxx_have_complex_math2::
+* ax_cxx_have_empty_iostream::
+* ax_cxx_have_ext_hash_map::
+* ax_cxx_have_ext_hash_set::
+* ax_cxx_have_ext_slist::
+* ax_cxx_have_freeze_sstream::
+* ax_cxx_have_ieee_math::
+* ax_cxx_have_koenig_lookup::
+* ax_cxx_have_long_long_for_iostream::
+* ax_cxx_have_numeric_limits::
+* ax_cxx_have_sstream::
+* ax_cxx_have_std::
+* ax_cxx_have_stl::
+* ax_cxx_have_string_push_back::
+* ax_cxx_have_system_v_math::
+* ax_cxx_have_valarray::
+* ax_cxx_have_vector_at::
+* ax_cxx_header_pre_stdcxx::
+* ax_cxx_header_stdcxx_0x::
+* ax_cxx_header_stdcxx_98::
+* ax_cxx_header_stdcxx_tr1::
+* ax_cxx_header_tr1_unordered_map::
+* ax_cxx_header_tr1_unordered_set::
+* ax_cxx_header_unordered_map::
+* ax_cxx_header_unordered_set::
+* ax_cxx_ldflags_std_lang::
+* ax_cxx_member_constants::
+* ax_cxx_member_templates::
+* ax_cxx_member_templates_outside_class::
+* ax_cxx_mutable::
+* ax_cxx_namespace_std::
+* ax_cxx_namespaces::
+* ax_cxx_new_for_scoping::
+* ax_cxx_old_for_scoping::
+* ax_cxx_partial_ordering::
+* ax_cxx_partial_specialization::
+* ax_cxx_reinterpret_cast::
+* ax_cxx_rtti::
+* ax_cxx_static_cast::
+* ax_cxx_stlport_hashmap::
+* ax_cxx_template_keyword_qualifier::
+* ax_cxx_template_qualified_base_class::
+* ax_cxx_template_qualified_return_type::
+* ax_cxx_template_scoped_argument_matching::
+* ax_cxx_templates::
+* ax_cxx_templates_as_template_arguments::
+* ax_cxx_typename::
+* ax_cxx_use_numtrait::
+* ax_cxx_verbose_terminate_handler::
 * ax_cxxcpp_check_flag::
+* ax_decl_wchar_max::
+* ax_define_dir::
+* ax_define_integer_bits::
+* ax_define_sub_path::
 * ax_dirname::
 * ax_dist_msi::
 * ax_dist_rpm::
@@ -417,6 +313,7 @@ General Public License for more details.
 * ax_ext_check_header::
 * ax_ext_have_lib::
 * ax_extra_dist::
+* ax_f77_cmain_fflags::
 * ax_f90_header::
 * ax_f90_internal_headmod::
 * ax_f90_library::
@@ -425,8 +322,15 @@ General Public License for more details.
 * ax_f90_module_extension::
 * ax_f90_module_flag::
 * ax_file_escapes::
+* ax_func_accept_argtypes::
+* ax_func_fork::
+* ax_func_getopt_long::
+* ax_func_memmove::
+* ax_func_mkdir::
 * ax_func_posix_memalign::
+* ax_func_snprintf::
 * ax_func_which_gethostbyname_r::
+* ax_func_which_getservbyname_r::
 * ax_gcc_archflag::
 * ax_gcc_const_call::
 * ax_gcc_install_dir::
@@ -441,10 +345,75 @@ General Public License for more details.
 * ax_gxx_version::
 * ax_have_adns::
 * ax_have_epoll::
+* ax_have_opengl::
 * ax_have_poll::
+* ax_have_qt::
 * ax_have_select::
 * ax_install_files::
+* ax_java_check_class::
+* ax_java_options::
+* ax_jni_include_dir::
 * ax_lang_compiler_ms::
+* ax_lapack::
+* ax_latex_class::
+* ax_latex_class_article::
+* ax_latex_class_book::
+* ax_latex_class_cweb::
+* ax_latex_class_report::
+* ax_latex_classes::
+* ax_latex_compress_eps::
+* ax_latex_converting_fig::
+* ax_latex_converting_jpg_eps::
+* ax_latex_converting_png_eps::
+* ax_latex_default_class::
+* ax_latex_dvips_o_stdout::
+* ax_latex_dvips_t::
+* ax_latex_dvips_t_a4::
+* ax_latex_dvips_t_a4_landscape::
+* ax_latex_dvips_t_letter::
+* ax_latex_dvips_t_letter_landscape::
+* ax_latex_package::
+* ax_latex_package_amsmath::
+* ax_latex_package_babel::
+* ax_latex_package_babel_language::
+* ax_latex_package_fontenc::
+* ax_latex_package_input::
+* ax_latex_package_listings::
+* ax_latex_package_listings_language::
+* ax_latex_package_location::
+* ax_latex_package_opt::
+* ax_latex_packages::
+* ax_latex_prog_bibtex::
+* ax_latex_prog_dvibook::
+* ax_latex_prog_dvipdf::
+* ax_latex_prog_dvips::
+* ax_latex_prog_fig2dev::
+* ax_latex_prog_gnuplot::
+* ax_latex_prog_gunzip::
+* ax_latex_prog_gzip::
+* ax_latex_prog_jpeg2ps::
+* ax_latex_prog_jpegtopnm::
+* ax_latex_prog_kpsewhich::
+* ax_latex_prog_latex::
+* ax_latex_prog_latex2html::
+* ax_latex_prog_latex2man::
+* ax_latex_prog_latex2png::
+* ax_latex_prog_latex2rtf::
+* ax_latex_prog_makeindex::
+* ax_latex_prog_mf::
+* ax_latex_prog_mktexpk::
+* ax_latex_prog_pdflatex::
+* ax_latex_prog_pngtopnm::
+* ax_latex_prog_pnmtops::
+* ax_latex_prog_ps2pdf::
+* ax_latex_prog_psbook::
+* ax_latex_prog_psnup::
+* ax_latex_prog_psresize::
+* ax_latex_prog_psselect::
+* ax_latex_prog_pstops::
+* ax_latex_prog_texhash::
+* ax_latex_test::
+* ax_latex_texmf_path::
 * ax_ld_check_flag::
 * ax_lib_beecrypt::
 * ax_lib_crypto::
@@ -452,62 +421,129 @@ General Public License for more details.
 * ax_lib_expat::
 * ax_lib_firebird::
 * ax_lib_gcrypt::
+* ax_lib_id3::
+* ax_lib_metis::
 * ax_lib_mysql::
 * ax_lib_nettle::
 * ax_lib_nokalva::
 * ax_lib_oracle_oci::
 * ax_lib_orbit2::
 * ax_lib_postgresql::
+* ax_lib_readline::
+* ax_lib_socket_nsl::
 * ax_lib_sqlite3::
 * ax_lib_taglib::
+* ax_lib_upnp::
+* ax_lib_wad::
 * ax_lib_xalan::
 * ax_lib_xerces::
 * ax_lib_xml_security::
+* ax_libgcj_jar::
+* ax_libtoolize_cflags::
 * ax_llvm::
+* ax_lua::
 * ax_maintainer_mode_auto_silent::
 * ax_missing_prog::
+* ax_mpi::
 * ax_need_awk::
+* ax_normalize_path::
 * ax_not_enable_frame_pointer::
+* ax_numeric_namedlevel::
 * ax_openmp::
+* ax_patch_libtool_changing_cmds_ifs::
 * ax_path_bdb::
 * ax_path_generic::
 * ax_path_lib_pcre::
 * ax_path_milter::
 * ax_path_missing::
 * ax_perl_ext_flags::
+* ax_perl_module_version::
+* ax_pgsql_priv_root::
+* ax_pkg_mico::
+* ax_pkg_swig::
 * ax_prefix_config_h::
 * ax_print_to_file::
+* ax_prog_apache::
 * ax_prog_bison::
+* ax_prog_cc_char_subscripts::
+* ax_prog_cc_for_build::
+* ax_prog_cp_s::
+* ax_prog_crontab::
 * ax_prog_doxygen::
 * ax_prog_fasm::
 * ax_prog_fasm_opt::
+* ax_prog_fig2dev::
 * ax_prog_flex::
 * ax_prog_guile_version::
 * ax_prog_hla::
 * ax_prog_hla_opt::
+* ax_prog_httpd::
+* ax_prog_jar::
+* ax_prog_java::
+* ax_prog_java_cc::
+* ax_prog_java_works::
+* ax_prog_javac::
+* ax_prog_javac_works::
+* ax_prog_javadoc::
+* ax_prog_javah::
 * ax_prog_masm::
 * ax_prog_masm_opt::
 * ax_prog_md5sum::
+* ax_prog_modprobe::
+* ax_prog_mysql::
+* ax_prog_mysqladmin::
+* ax_prog_mysqld::
+* ax_prog_mysqlimport::
+* ax_prog_mysqlshow::
 * ax_prog_nasm::
 * ax_prog_nasm_opt::
+* ax_prog_perl_modules::
 * ax_prog_perl_version::
+* ax_prog_pgclient::
 * ax_prog_python_version::
 * ax_prog_ruby_version::
+* ax_prog_scp::
+* ax_prog_ssh::
 * ax_prog_tasm::
 * ax_prog_tasm_opt::
 * ax_prog_tcl::
+* ax_prog_xsltproc::
 * ax_prog_yasm::
 * ax_prog_yasm_opt::
+* ax_prototype::
+* ax_prototype_accept::
+* ax_prototype_getsockname::
+* ax_prototype_setsockopt::
+* ax_pthread::
 * ax_python::
 * ax_python_config_var::
+* ax_python_devel::
+* ax_python_embed::
+* ax_python_module::
 * ax_require_one_func::
+* ax_rpm_init::
 * ax_ruby_devel::
+* ax_set_default_paths_system::
+* ax_short_sleep::
 * ax_silent_mode::
+* ax_sip_devel::
+* ax_snprintf_oflow::
 * ax_spec_file::
 * ax_spec_package_version::
 * ax_split_version::
+* ax_string_strcasecmp::
+* ax_strings_strcasecmp::
+* ax_struct_semun::
+* ax_subdir_files::
 * ax_subst_with::
+* ax_swig_enable_cxx::
+* ax_swig_multi_module_support::
+* ax_swig_python::
+* ax_sys_dev_poll::
+* ax_sys_largefile_sensitive::
 * ax_sys_perlsharpbang::
+* ax_sys_weak_alias::
+* ax_sysv_ipc::
 * ax_tls::
 * ax_trilinos_amesos::
 * ax_trilinos_base::
@@ -522,76 +558,27 @@ General Public License for more details.
 * ax_trilinos_thyra_epetraext::
 * ax_try_awk_anyout::
 * ax_try_awk_expout::
+* ax_try_compile_java::
+* ax_try_run_javac::
+* ax_type_socklen_t::
 * ax_upload::
+* ax_var_timezone_externals::
+* ax_very_nice::
 * ax_warning_default_aclocaldir::
 * ax_warning_default_pkgconfig::
 * ax_wint_t::
 * ax_with_apxs::
+* ax_with_build_path::
+* ax_with_curses::
 * ax_with_dmalloc::
 * ax_with_guile::
+* ax_with_mpatrol::
 * ax_with_perl::
 * ax_with_prog::
 * ax_with_python::
 * ax_with_ruby::
-* az_python::
-* berkeley_db::
-* bnv_have_qt::
-* cf_ebcdic::
-* check_gnu_make::
-* check_zlib::
-* compile_value::
-* ct_check_postgres_db::
-* dps_check_plugin::
-* dps_java_check_class::
-* dps_libgcj_jar::
-* dps_snprintf_oflow::
-* dps_xtra_classpath::
-* etr_short_sleep::
-* etr_string_strcasecmp::
-* etr_strings_strcasecmp::
-* etr_struct_semun::
-* etr_sysv_ipc::
-* gl_trilinos_absolute_header::
-* immdx_lib_metis::
-* klm_sys_weak_alias::
-* lib_socket_nsl::
-* lua::
-* mdl_cxx_function_try_blocks::
-* mdl_have_opengl::
-* merk_sip_devel::
-* mni_cxx_have_koenig_lookup::
-* mp_with_curses::
-* ms_check_pgsql_db::
-* ms_pgsql_priv_root::
-* ms_prog_pgclient::
-* patch_libtool_changing_cmds_ifs::
-* rlc_xercesc::
-* rssh_check_off64_t::
-* rssh_check_sunpro_c::
-* sg_afs::
-* smr_with_build_path::
-* swig_enable_cxx::
-* swig_multi_module_support::
-* swig_python::
-* type_socklen_t::
-* vl_check_sign::
-* vl_decl_wchar_max::
-* vl_lib_readline::
-* vl_prog_fig2dev::
-@end menu
-
-Obsolete macros:
-
-@menu
-* ac_check_curl::               For a superior replacement @xref{ax_lib_curl}.
-* ac_check_taglib::             For a superior replacement @xref{ax_lib_taglib}.
-* ac_compile_warnings::         For a superior replacement @xref{ax_cflags_warn_all}.
-* ac_path_generic::             For a superior replacement @xref{ax_path_generic}.
-* ac_prompt_user::              Configure scripts are expected to run non-interactively.
-* ac_prompt_user_no_define::    Configure scripts are expected to run non-interactively.
-* ax_cflags_warn_all_ansi::     For a superior replacement @xref{ax_cflags_warn_all}.
-* check_ssl::                   For a superior replacement @xref{ax_check_openssl}.
-* vl_prog_cc_warnings::         For a superior replacement @xref{ax_cflags_warn_all}.
+* ax_xercesc::
+* ax_xtra_classpath::
 @end menu
 
 @include stage/all-macros.texi
