README: updated the download URL to point to savannah
The README file is really outdated and needs to be re-written.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 #+TITLE: Autoconf Archive TODO                 -*- mode:org;fill-column:79; -*-
 
+* TODO Update the README file
 * TODO Document our new mailing lists.
 
   * http://lists.nongnu.org/mailman/listinfo/autoconf-archive-announce
