post-release administrivia
* NEWS: Add header line for next release.
* .prev-version: Record previous version.
* cfg.mk (old_NEWS_hash): Auto-update.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 #+TITLE: Autoconf Archive NEWS                 -*- mode:org;fill-column:79; -*-
 #+STARTUP: showall
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+
 
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
