AX_CXX_HELPFUL_TERMINATE_HANDLER: initial version
Submitted by Kevin Locke in <https://savannah.nongnu.org/patch/index.php?7005>:

 | As a compliment (or possibly replacement) to the current
 | AX_CXX_VERBOSE_TERMINATE_HANDLER macro, I present the
 | AX_CXX_HELPFUL_TERMINATE_HANDLER macro. Rather than specifically looking for
 | the GNU libstdc++ verbose_terminate_handler, this macro uses a test program
 | which throws an uncaught exception then checks if the output contains
 | information about the exception. This way it can detect helpful terminate
 | handlers other than the current one provided with GNU libstdc++.
 |
 | The design of this macro is not perfect. Most importantly, the logic for
 | capturing and testing the output of the test program is not very elegant. I
 | had first attempted to check for output from within the test program (by
 | redirecting std::cerr, capturing SIGABRT, etc.) but it was excessively ugly
 | and not very portable. The result is that the logic in the macro itself is a
 | little more awkward so that the test program is trivial. I think it was a
 | good trade, but feedback is welcome.

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 #+TITLE: Autoconf Archive NEWS                 -*- mode:org;fill-column:79; -*-
 #+STARTUP: showall
+
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-
+  The following macros have been added: AX_CXX_HELPFUL_TERMINATE_HANDLER.
 
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
