--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@
 
   The following macros have been added: AX_CXX_HELPFUL_TERMINATE_HANDLER.
 
+  AX_C_IFDEF has been deprecated, because standard Autoconf contains a macro,
+  AC_CHECK_DECL, which replaces its functionality.
+
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
   All macros that used a prefix other than AX_ -- or no prefix at all -- have
