--- a/TODO
+++ b/TODO
@@ -91,6 +91,7 @@
 
 * TODO Generate serial lines
 
-  A way to obtain that number automatically might be the following approach:
-
-  : git log -- m4/ax_have_epoll.m4 | egrep -c '^commit [0-9a-f]'
+  The script [[file:set-serial.sh][set-serial.sh]] uses the git repository to determine an appropriate
+  serial number (i.e. the number of commits that have occurred) and patches
+  that number into the m4 file. The solution seems to work nicely, but it isn't
+  integrated into the build process yet.
