AX_CHECK_ICU: added support for icu-specific CPPFLAGS
This macro uses the icu-config utility which treats CPPFLAGS separately
from CFLAGS and CXXFLAGS. Clients should be able to obtain the value of
CPPFLAGS, which is not currently possible. This patch fixes that.

Note that this behavior is slightly different from PKG_CHECK_MODULES,
since the underlying pkg-config doesn't distinguish between CFLAGS and
CPPFLAGS. Using CFLAGS instead of CPPFLAGS with icu-config leads to
problems, such as header files not found, and compilation errors since
icu has its own slightly quirky ideas about what kind of strict warnings
should be used, even though these are not required for using the ICU
headers.

Clients should typically use ICU_CPPFLAGS rather than ICU_CFLAGS or
ICU_CXXFLAGS if they just want to be able to find headers.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
   AX_C_IFDEF has been deprecated, because standard Autoconf contains a macro,
   AC_CHECK_DECL, which replaces its functionality.
 
+  AX_CHECK_ICU has been extended to support icu-specific CPPFLAGS.
+
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
   All macros that used a prefix other than AX_ -- or no prefix at all -- have
