--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
   AX_CHECK_ICU has been extended to support icu-specific CPPFLAGS.
 
+  AX_C_PRINTF_THSEP has been deprecated because of technical flaws. See
+  http://savannah.nongnu.org/patch/?6848 for further details.
+
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
   All macros that used a prefix other than AX_ -- or no prefix at all -- have
